<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="preferencescreen">
        
    <CheckBoxPreference
            android:key="service_started"
            android:title="@string/service_preference_title" 
            android:summary="@string/service_preference_title_summary"
            android:enabled="true" 
            android:selectable="true"/>
    <ListPreference
            android:key="meters_update_rate"
            android:dialogTitle="@string/meters_update_rate_preference_title"
            android:title="@string/meters_update_rate_preference_title"
            android:summary="@string/meters_update_rate_preference_summary"
            android:enabled="true" 
            android:selectable="true"
            android:persistent="true"
            android:entries="@array/meters_update_rate_human_value"
            android:entryValues="@array/meters_update_rate_value"
            android:defaultValue="10"/>
    <ListPreference
            android:key="time_update_rate"
            android:dialogTitle="@string/time_update_rate_preference_title"
            android:title="@string/time_update_rate_preference_title"
            android:summary="@string/time_update_rate_preference_summary"
            android:enabled="true" 
            android:selectable="true"
            android:persistent="true"
            android:entries="@array/time_update_rate_human_value"
            android:entryValues="@array/time_update_rate_value"
            android:defaultValue="0"/>
</PreferenceScreen> 